--- a/partition/style.css
+++ b/partition/style.css
@@ -2,8 +2,7 @@ body {
   background: url(texture-noise.png);
   overflow: hidden;
   margin: 0;
-  font-size: 18px;
-  font-family: "Helvetica Neue", Helvetica;
+  font:16px sans-serif;
   text-color: grey;
 }
 
