--- a/templates/linechart/multi-line-full.html
+++ b/templates/linechart/multi-line-full.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
       body {
-        font: 12px sans-serif;
+        font: 10px sans-serif;
         color: #121401;
       }
       .axis path,
@@ -16,30 +16,36 @@
         stroke-width: 2px;
         shape-rendering: crispEdges;
       }
+    
     </style>
   </head>
   <body>
-    <h2 style="padding-left:60px;">Felony Offenses and Summonses Issued (2007-2014)</h2>
+
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script>
-      var margin = {top: 20, right: 55, bottom: 30, left: 75},
-          width  = 1000 - margin.left - margin.right,
-          height = 600  - margin.top  - margin.bottom;
+
+    var margin = {top: 20, right: 55, bottom: 30, left: 75},
+          width  = 600 - margin.left - margin.right,
+          height = 300  - margin.top  - margin.bottom;
 
       var x = d3.scale.ordinal()
           .rangeRoundBands([0, width], .1);
 
+
       var y = d3.scale.linear()
           .rangeRound([height, 0]);
+
 
       var xAxis = d3.svg.axis()
           .scale(x)
           .orient("bottom");
 
+
       var yAxis = d3.svg.axis()
           .scale(y)
+    //      .ticks(4)
           .orient("left");
 
       var line = d3.svg.line()
@@ -47,8 +53,10 @@
           .x(function (d) { return x(d.label) + x.rangeBand() / 2; })
           .y(function (d) { return y(d.value); });
 
+
       var color = d3.scale.ordinal()
           .range(["#101b4d","#ff4500","#475003","#9c8305","#d3c47c"]);
+
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
@@ -56,10 +64,14 @@
         .append("g")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-      d3.csv("data/felonysummons2007_2014.csv", function (error, data) {
 
-        var labelVar = 'year';
+
+
+      d3.csv("data/doc_violence_total.csv", function (error, data) {
+
+        var labelVar = 'quarter';
         var varNames = d3.keys(data[0]).filter(function (key) { return key !== labelVar;});
+
         color.domain(varNames);
 
         var seriesData = varNames.map(function (name) {
@@ -71,13 +83,14 @@
           };
         });
 
-        x.domain(data.map(function (d) { return d.year; }));
-        y.domain([
-          d3.min(seriesData, function (c) {
-            return d3.min(c.values, function (d) { return d.value; });
-          }),
-          d3.max(seriesData, function (c) {
-            return d3.max(c.values, function (d) { return d.value; });
+        x.domain(data.map(function (d) { return d.quarter; }));
+
+//Y AXIS - change first value in domain to set minimun
+
+        y.domain([1000,
+          d3.max(seriesData, function (c)
+          {return d3.max
+            (c.values, function (d) { return d.value; });
           })
         ]);
 
@@ -94,7 +107,7 @@
             .attr("y", 6)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
-            .text("Number of Offenses");
+            .text("Number of Violent Incidents");
 
         var series = svg.selectAll(".series")
             .data(seriesData)
@@ -121,11 +134,14 @@
            .on("mouseover", function (d) { showPopover.call(this, d); })
            .on("mouseout",  function (d) { removePopovers(); })
 
+
+
+// lEGEND Start
         var legend = svg.selectAll(".legend")
             .data(varNames.slice().reverse())
           .enter().append("g")
             .attr("class", "legend")
-            .attr("transform", function (d, i) { return "translate(55," + i * 20 + ")"; });
+            .attr("transform", function (d, i) { return "translate(0, 300 )"; }); //translate(<x> [<y>]) - moves legend
 
         legend.append("rect")
             .attr("x", width - 10)
@@ -140,6 +156,7 @@
             .attr("dy", ".35em")
             .style("text-anchor", "end")
             .text(function (d) { return d; });
+//LEGEND end
 
         function removePopovers () {
           $('.popover').each(function() {
@@ -155,11 +172,12 @@
             trigger: 'manual',
             html : true,
             content: function() {
-              return "year: " + d.label +
-                     "<br/>Rounds: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
+              return "Time Frame: " + d.label +
+                     "<br/>Violent Incidents: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
           });
           $(this).popover('show')
         }
+
       });
     </script>
   </body>
