--- a/templates/doughnut3/index.html
+++ b/templates/doughnut3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Result of Summons</title>
+        <title>Adopted Budget FY 2016 - Top Ten Agencies for Spending</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
