--- a/templates/partition2/index.html
+++ b/templates/partition2/index.html
@@ -45,7 +45,7 @@ circle.child {
     </h2>
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
-
+  <script>
 var w = 1280,
     h = 800,
     r = 720,
