--- a/templates/packzoom2/index.html
+++ b/templates/packzoom2/index.html
@@ -43,10 +43,9 @@ circle.child {
       Flare code size<br>
       circle packing
     </h2>
-    <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="d3/d3.layout.js"></script>
-    <script type="text/javascript">
 
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script>
 var w = 1280,
     h = 800,
     r = 720,
