--- a/templates/treemap/index.html
+++ b/templates/treemap/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<!-- http://bl.ocks.org/markfink/6240098 --> 
+<!-- http://bl.ocks.org/markfink/6240098 -->
 </head><body><header>
-  <aside>August 15, 2013</aside>
+
 </header>
 
-<h1>Treemap (d3 / DIV)</h1>
+<h1>Treemap </h1>
 
 <p id="chart">
 
-<p>Basically this is a shameless rip off from http://bl.ocks.org/mbostock/4063582 </p>
-<p>I added a piece of code to transform the flat CSV data into the hierarchical structure necessary for treemaps and a little bit more data.</p>
+<p>From http://bl.ocks.org/mbostock/4063582 </p>
+<p>Transforms the flat CSV data into the hierarchical structure necessary for treemaps and a little bit more data.</p>
 
 <style>
 
