changed link to d3

--- a/templates/treemap/index.html
+++ b/templates/treemap/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>Zoomable Treemap</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="http://d3js.org/d3.v2.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script src="http://code.jquery.com/jquery-1.7.1.js"></script>
 
 <p id="chart">
