--- a/templates/treemap/style.css
+++ b/templates/treemap/style.css
@@ -1,54 +1,89 @@
-#chart {
-width: 820px;
-height: 700px;
-background: #bbb;
-margin: 1px auto;
-position: relative;
-	  -webkit-box-sizing: border-box;
-	  -moz-box-sizing: border-box;
-	  box-sizing: border-box;
+body {
+  background: url(texture-noise.png);
+  overflow: hidden;
+  margin: 0;
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica;
 }
 
-text {
-	pointer-events: none;
+#chart, #header, #footer {
+  position: absolute;
+  top: 0;
 }
 
-.grandparent text { /* header text */
-	font-weight: bold;
-	font-size: medium;
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+#header, #footer {
+  z-index: 1;
+  display: block;
+  font-size: 36px;
+  font-weight: 300;
+  text-shadow: 0 1px 0 #fff;
+}
+
+#header.inverted, #footer.inverted {
+  color: #fff;
+  text-shadow: 0 1px 4px #000;
+}
+
+#header {
+  top: 80px;
+  left: 140px;
+  width: 1000px;
+}
+
+#footer {
+  top: 680px;
+  right: 140px;
+  text-align: right;
 }
 
 rect {
-fill: none;
-stroke: #fff;
+  fill: none;
+  pointer-events: all;
 }
 
-rect.parent,
-	.grandparent rect {
-		stroke-width: 2px;
-	}
-
-.grandparent rect {
-fill: #fff;
+pre {
+  font-size: 18px;
 }
 
-.children rect.parent,
-	.grandparent rect {
-cursor: pointer;
-	}
-
-rect.parent {
-	pointer-events: all;
+line {
+  stroke: #000;
+  stroke-width: 1.5px;
 }
 
-.children:hover rect.child,
-	.grandparent:hover rect {
-fill: #aaa;
-	}
+.string, .regexp {
+  color: #f39;
+}
 
-.textdiv { /* text in the boxes */
-	font-size: x-small;
-padding: 5px;
-	 font-family: "Open Sans", Helvetica, Arial, sans-serif;
+.keyword {
+  color: #00c;
+}
+
+.comment {
+  color: #777;
+  font-style: oblique;
+}
+
+.number {
+  color: #369;
+}
+
+.class, .special {
+  color: #1181B8;
+}
+
+a:link, a:visited {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #666;
+}
+
+.hint {
+  position: absolute;
+  right: 0;
+  width: 1280px;
+  font-size: 12px;
+  color: #999;
 }
