changed bar colors

--- a/templates/barhierarchy2/index.html
+++ b/templates/barhierarchy2/index.html
@@ -41,8 +41,8 @@ var m = [80, 160, 0, 300], // top right bottom left
     x = d3.scale.linear().range([0, w]),
     y = 25, // bar height
     //z = d3.scale.ordinal().range(["steelblue", "#aaa"]); // bar color
-    z = d3.scale.category10(); // bar color
-
+    
+var color = d3.scale.category10();
 
 var hierarchy = d3.layout.partition()
     .value(function(d) { return d.size; });
@@ -217,6 +217,8 @@ function bar(d) {
   bar.append("svg:rect")
       .attr("width", function(d) { return x(d.value); })
       .attr("height", y);
+      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
+      .attr("class", function(d) { return d.children ? "parent" : "child"; });
 
   return bar;
 }
