--- a/templates/barhierarchy2/index.html
+++ b/templates/barhierarchy2/index.html
@@ -37,7 +37,7 @@ var m = [80, 160, 0, 300], // top right bottom left
     h = 800 - m[0] - m[2], // height
     x = d3.scale.linear().range([0, w]),
     y = 25, // bar height
-    //z = d3.scale.ordinal().range(["steelblue", "#aaa"]); // bar color
+    z = d3.scale.ordinal().range(["steelblue", "#aaa"]); // bar color
     
 var color = d3.scale.category10();
 
