--- a/templates/collapsetree/index.html
+++ b/templates/collapsetree/index.html
@@ -26,7 +26,7 @@
 
 </style>
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="d3js.org/d3.v3.min.js"></script>
 <script>
 
 var margin = {top: 20, right: 120, bottom: 20, left: 120},
