--- a/templates/barhierarchy2/index.html
+++ b/templates/barhierarchy2/index.html
@@ -92,7 +92,7 @@ function down(d, i) {
 
   // Have the text fade-in, even though the bars are visible.
   // Color the bars as parents; they will fade to children if appropriate.
-  enter.select("text").style("fill-opacity", 1e-6);
+  enter.select("text").style("fill-opacity", z(true));
   enter.select("rect").style("fill", z(true));
 
   // Update the x-scale domain.
