--- a/templates/barhierarchy2/index.html
+++ b/templates/barhierarchy2/index.html
@@ -141,7 +141,7 @@ function up(d) {
   // Enter the new bars for the clicked-on data's parent.
   var enter = bar(d.parent)
       .attr("transform", function(d, i) { return "translate(0," + y * i * 1.2 + ")"; })
-      .style("opacity", 1e-6);
+      .style("opacity", z(true));
 
   // Color the bars as appropriate.
   // Exiting nodes will obscure the parent bar, so hide it.
