changed color and title

--- a/templates/partition3/index.html
+++ b/templates/partition3/index.html
@@ -16,7 +16,7 @@
 
 rect {
   stroke: #eee;
-  fill: #aaa;
+  fill: #FF4081;
   fill-opacity: .8;
 }
 
@@ -34,7 +34,7 @@ text {
   <body>
     <div id="body">
       <div id="footer">
-        d3.layout.partition
+        NYC Adopted Budgted FY 2017 
         <div class="hint">click or option-click to descend or ascend</div>
       </div>
     </div>
