--- a/templates/sunburstsequence/index.html
+++ b/templates/sunburstsequence/index.html
@@ -15,7 +15,7 @@
       <div id="chart">
         <div id="explanation" style="visibility: hidden;">
           <span id="percentage"></span><br/>
-          of visits begin with this sequence of pages
+          of the Adopted Budget FY 2017
         </div>
       </div>
     </div>
