--- a/templates/barhorizontal2/index.html
+++ b/templates/barhorizontal2/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar3" width=auto max-height="400"></canvas>
+<canvas id="barhorizontal2" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -66,7 +66,7 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("bar3");
+var ctx = document.getElementById("barhorizontal2");
 
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
