--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -16,7 +16,7 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display = false
-Chart.defaults.global.tooltips.bodyFontSize = 16
+Chart.defaults.global.tooltips.bodyFontSize = 14
 
 
 
@@ -28,7 +28,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: [
                 "Department of Education",
-                "Miscellaneous (Health Insurance, Social Security, Reserves, Payments to MTA) ",
+                "Miscellaneous (Health Insurance, Reserves, Payments to MTA) ",
                 "Pension Contributions",
                 "Department of Social Services",
                 "Police Department",
