updated titles and data

--- a/templates/barhorizontal2/index.html
+++ b/templates/barhorizontal2/index.html
@@ -71,15 +71,15 @@ var ctx = document.getElementById("barhorizontal2");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Personnel ","Fringe Benefits","Contractual Services","Social Services","Other Services and Charges","Fixed and Misc Charges","Debt Service","Supplies and Materials","Amounts to be Scheduled"],
+        labels: ["Pay and Fringe Benefits","Contractual Services","Charges, Services, and Expenses","Social Services","Transfers for Debt Service","Property, Equipement, and Supplies","Amounts to Be Scheduled","OTPS Holding Codes",
         datasets: [{
             label: 'Types of Spending in FY 2017 Budget',
-            backgroundColor:["#FFFF8D","#FFD180","#FF80AB","#F4FF81","#D7CCC8","#B388FF","#8C9EFF","#82B1FF"],
+            backgroundColor:["#2f56a6","#43AC6A","#FFB716","#A24993","#A07952","#7E73E5","#d05d4e","#EFDB1D"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [50702826464,36067547636,26491377302,16997117010,12132250754,8870536146,5589800244,2941354284,78552798]
+            data: [42177036119,14997874186,10848157215,5538809490,2870412982,1972427618,38337545,24041]
         }]
 
     },
