removed two data points

--- a/templates/barhorizontal2/index.html
+++ b/templates/barhorizontal2/index.html
@@ -71,7 +71,7 @@ var ctx = document.getElementById("barhorizontal2");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Pay and Fringe Benefits","Contractual Services","Charges, Services, and Expenses","Social Services","Transfers for Debt Service","Property, Equipement, and Supplies","Amounts to Be Scheduled","OTPS Holding Codes",
+        labels: ["Pay and Fringe Benefits","Contractual Services","Charges, Services, and Expenses","Social Services","Transfers for Debt Service","Property, Equipement, and Supplies"],
         datasets: [{
             label: 'Types of Spending in FY 2017 Budget',
             backgroundColor:["#2f56a6","#43AC6A","#FFB716","#A24993","#A07952","#7E73E5","#d05d4e","#EFDB1D"],
@@ -79,9 +79,8 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [42177036119,14997874186,10848157215,5538809490,2870412982,1972427618,38337545,24041]
+            data: [42177036119,14997874186,10848157215,5538809490,2870412982,1972427618]
         }]
-
     },
     options: {
       scales:{
