new line chart - change overtime

--- a/templates/linechartmulti6/index.html
+++ b/templates/linechartmulti6/index.html
@@ -34,7 +34,7 @@ var myChart = new Chart(ctx, {
               borderColor: "#d05d4e",
               borderWidth: 0,
               hoverBackgroundColor: "#d05d4e",
-              hoverBorderColor: "#eeeeee",
+          //    hoverBorderColor: "#eeeeee",
               data: [11883255000,12780991000,13148112000,13871184000,14959318000,15884401000,16977034000,17903053000,18498505000,18938899000,19283256000,19232415000,20085287000,20999365000,22242644637]
             },
             {
@@ -58,7 +58,7 @@ var myChart = new Chart(ctx, {
               data: [1491901000,1750586000,2444470000,3369832000,4014955000,4856280000,5740554000,6389179000,6755590000,6999833000,7954705000,8178550000,8265364000,8616325000,9285221553]
             },
             {
-              label: "Miscellaneous",
+              label: "Miscellaneous (Health Insurance, Reserves, Payments to MTA)",
               fill: false,
               backgroundColor: "#E07B3B",
               borderColor: "#E07B3B",
