--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="doughnut3" width=auto max-height="400"></canvas>
+<canvas id="doughnut4" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -21,7 +21,7 @@ Chart.defaults.global.tooltips.bodyFontSize = 14
 
 
 
-var ctx = document.getElementById("doughnut3");
+var ctx = document.getElementById("doughnut4");
 
 var myChart = new Chart(ctx, {
     type: 'doughnut',
