changed size and color

--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -59,7 +59,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY16 Adopted Budget',
-            backgroundColor:["#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952","#d05d4e","#E07B3B","#EF9929","#FFB716","#C0B332","#82B04E","#43AC6A","#7CBC50","#B6CB37","#EFDB1D","#AFAF4B","#6F8278","#2f56a6","#4960BB","#6469D0","#7E73E5","#8A65CA","#9657AE","#A24993","#A1597D","#A16968","#A07952"],
+            backgroundColor:["#228ae6","#2B8BDC","#338CD3","#3C8DC9","#458EC0","#4E8FB6","#568FAD","#5F90A3","#68919A","#719290","#799387","#82947D","#959569","#9C9661","#A3965A","#AA9752","#B1984A","#B89943","#BF993B","#C69A34","#CD9B2C","#D49C24","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D" ],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
