--- a/templates/doughnut5/index.html
+++ b/templates/doughnut5/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="doughnut5" width=auto max-height="400"></canvas>
+<canvas id="doughnut5" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
