--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -59,7 +59,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY16 Adopted Budget',
-            backgroundColor:["#228ae6","#2B8BDC","#338CD3","#3C8DC9","#458EC0","#4E8FB6","#568FAD","#5F90A3","#68919A","#719290","#799387","#82947D","#959569","#9C9661","#A3965A","#AA9752","#B1984A","#B89943","#BF993B","#C69A34","#CD9B2C","#D49C24","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D","#DB9C1D" ],
+            backgroundColor:["#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00",],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
