changed chart size

--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -59,7 +59,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY16 Adopted Budget',
-            backgroundColor:["#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00",],
+            backgroundColor:["#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
