--- a/templates/doughnut5/index.html
+++ b/templates/doughnut5/index.html
@@ -16,7 +16,7 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display = false
-Chart.defaults.global.tooltips.bodyFontSize = 12
+Chart.defaults.global.tooltips.bodyFontSize = 10
 
 
 
@@ -52,7 +52,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY17 Adopted Budget',
-            backgroundColor:["#2f56a6","#43AC6A","#7E73E5","#A07952","#A24993","#d05d4e","#EFDB1D","#FFB716","#2f56a6","#43AC6A","#7E73E5","#A07952","#A24993","#d05d4e","#EFDB1D","#FFB716","#2f56a6","#43AC6A","#7E73E5","#A07952","#A24993","#d05d4e","#EFDB1D","#FFB716"],
+            backgroundColor:["#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952","#607D8B","#A07952"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
