--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div style="width:75%;">
 		<button onclick="resetZoom()">Reset Zoom</button>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" width="400" height="400"></canvas> 
 	</div>
 	<script>
 
@@ -42,11 +42,11 @@
           {
             label: "Education",
             fill: false,
-            backgroundColor: "#d05d4e",
-            borderColor: "#d05d4e",
+            backgroundColor: "#228ae6",
+            borderColor: "#228ae6",
             borderWidth: 1,
-            pointHoverBackgroundColor: "grey",
-            pointHoverBorderColor: "grey",
+            pointHoverBackgroundColor: "#228ae6",
+            pointHoverBorderColor: "#228ae6",
             pointHoverBorderWidth: 2,
             data: [11883255000,12780991000,13148112000,13871184000,14959318000,15884401000,16977034000,17903053000,18498505000,18938899000,19283256000,19232415000,20085287000,20999365000,22242644000,23189540000]
           },
