--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-	<div style="width:75%;">
+
 		<button onclick="resetZoom()">Reset Zoom</button>
-		<canvas id="canvas" width="400" height="400"></canvas> 
-	</div>
+		<canvas id="canvas" width=auto ></canvas>
+	
 	<script>
 
   Chart.defaults.global.legend.display = false
