--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -19,8 +19,8 @@
 <body>
 
 		<button onclick="resetZoom()">Reset Zoom</button>
-		<canvas id="canvas" width=auto ></canvas>
-	
+		<canvas id="canvas" width="400" height="400" ></canvas>
+
 	<script>
 
   Chart.defaults.global.legend.display = false
