--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-		<canvas id="canvas" width="400" height="400" ></canvas>
+		<canvas id="canvas" width=auto height="400" ></canvas>
 
 	<script>
 
