--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-		<canvas id="canvas" width=auto height="400" ></canvas>
+		<canvas id="canvas" width=auto height="200" ></canvas>
 
 	<script>
 
@@ -430,7 +430,7 @@
             },
 						scaleLabel: {
 							display: true,
-							labelString: 'value'
+							labelString: 'Expense Budget Amount'
 						}
 					}]
 				},
