--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-		<canvas id="canvas" width=auto height="200" ></canvas>
+		<canvas id="canvas" width="500" height="300" ></canvas>
 
 	<script>
 
