--- a/templates/linechartmulti6zoom/index.html
+++ b/templates/linechartmulti6zoom/index.html
@@ -412,8 +412,8 @@
 				//		},
 
 						scaleLabel: {
-							display: true,
-							labelString: 'Year'
+							display: false
+				//			labelString: 'Year'
 						},
 						ticks: {
 							maxRotation: 0,
