--- a/templates/doughnut5/index.html
+++ b/templates/doughnut5/index.html
@@ -16,7 +16,9 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display = false
-Chart.defaults.global.tooltips.bodyFontSize = 10
+Chart.defaults.global.tooltips.bodyFontSize = 12
+Chart.defaults.global.tooltips.fontFamily = 'open sans'
+
 
 
 
