--- a/templates/doughnut4/index.html
+++ b/templates/doughnut4/index.html
@@ -30,9 +30,12 @@ var myChart = new Chart(ctx, {
     data: {
         labels: [
                   "Education",
+                  "Misc",
                   "Social Services & Children's Services",
+                  "Pension Contributions",
                   "Public Safety",
                   "Fire and Criminal Justice Services",
+                  "Debt Service",
                   "Housing and Buildings",
                   "Health",
                   "Sanitation and Solid Waste",
@@ -57,16 +60,16 @@ var myChart = new Chart(ctx, {
                   "Civil Rights",
                   "Veterans",
                   "Civil Service and Labor",
-                  "Standards and Ethics",
+                  "Standards and Ethics"
                 ],
         datasets: [{
-            label: 'FY16 Adopted Budget',
-            backgroundColor:["#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00","#228ae6","#f59f00"],
+            label: 'FY17 Adopted Budget',
+            backgroundColor:["#228ae6","#f59f00","#9AC9F3","#f59f00","#228ae6","#9AC9F3","#f59f00","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6","#9AC9F3","#228ae6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [38.989,17.432,9.720,6.142,4.811,3.278,2.958,2.957,2.544,1.851,1.784,1.276,1.100,0.888,0.840,0.711,0.641,0.581,0.415,0.408,0.319,0.092,0.082,0.071,0.069,0.022,0.007,0.006,0.004]
+            data: [28.328,13.629,12.665,9.909,7.062,4.463,3.806,3.495,2.382,2.149,2.148,1.849,1.345,1.296,0.927,0.799,0.646,0.610,0.517,0.465,0.422,0.301,0.296,0.232,0.067,0.060,0.052,0.050,0.016,0.005,0.004,0.003]
         }]
     }
         ,
